# Arkart

./: README.txt
doc/: .~lock.Prototype 1_informal manual.docx#  HW_README  Prototype 1_informal manual.docx  RC Car Arduino Port Map.xlsx  README.md
source/Arduino/ECU_Due/PWM_INOUT_ULTRASONIC16.2/: PWM_INOUT_ULTRASONIC16.2.ino
source/Arduino/ECU_Due/PWM_INOUT_ULTRASONIC16.3/: Drive.h  PWM_INOUT_ULTRASONIC16.3.ino  Ultrasonic.h
source/Arduino/ECU_Uno/PWM_INOUT_ULTRASONIC15.3/: PWM_INOUT_ULTRASONIC15.3.ino
source/Arduino/Utilities/echo/: echo.ino
source/RaspberryPi/: Arkart.py  DistanceSensor_HCSR04.py  accgyro9dof.py  constant.py  distanceHCSR.py  ecsSet.py  servos16ch.py
source/RaspberryPi/color_learn_v3/: Blob.h  CMakeLists.txt  TaskScheduling_Pi.c  TaskScheduling_Pi.cpp  blob.cpp  decision_making.h  decision_making_v2_10.c
source/RaspberryPi/followColorDemo/: CMakeLists.txt  TaskScheduling_Pi.cpp  blob.cpp  blob.h  decision_making.cpp  decision_making.h  mylimits.h  screenlog.0
source/RaspberryPi/serialTestsForRPi/: serialTest.c  serialTest.cpp
source/opcuapy/: opcua_server.py
test/wordcounter/: pyqt.py
